working on adding font awesome

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,19 +1,21 @@
-.icon_black16 {
+// @import "~font-awesome/scss/font-awesome";
+
+.icon-black16 {
     background-image: url('./../images/favicon_black16.png');
 }
 
-.icon_black24 {
+.icon-black24 {
     background-image: url('./../images/favicon_black24.png');
 }
 
-.icon_black32 {
+.icon-black32 {
     background-image: url('./../images/favicon_black32.png');
 }
 
-.icon_black48 {
+.icon-black48 {
     background-image: url('./../images/favicon_black48.png');
 }
 
-.icon_black128 {
+.icon-black128 {
     background-image: url('./../images/favicon_black128.png');
 }
