working on injecting the toolbar on the compose

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -19,3 +19,10 @@
 .icon-black128 {
     background-image: url('./../images/favicon_black128.png');
 }
+
+.abt-toolbar {
+    height: 30px;
+    color: #1C9DD8;
+    padding: 5px;
+    border-bottom: 1px solid #AAAAAA;
+}
