implemented font awesome thru webpack and chrome extension loader

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,5 +1,3 @@
-// @import "~font-awesome/scss/font-awesome";
-
 .icon-black16 {
     background-image: url('./../images/favicon_black16.png');
 }
@@ -24,5 +22,5 @@
     height: 30px;
     color: #1C9DD8;
     padding: 5px;
-    border-bottom: 1px solid #AAAAAA;
+    border-bottom: 1px solid #cfcfcf;
 }
