--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -18,9 +18,35 @@
     background-image: url('./../images/favicon_black128.png');
 }
 
-.abt-toolbar {
-    height: 30px;
-    color: #1C9DD8;
-    padding: 5px;
-    border-bottom: 1px solid #cfcfcf;
+.abt-toolbar label {
+    // height: 30px;
+    // color: #1C9DD8;
+    // padding: 5px;
+    // border-bottom: 1px solid #cfcfcf;
+}
+.checkbox label, .radio label {
+    min-height: 20px;
+    padding-left: 20px;
+    margin-bottom: 0;
+    font-weight: 400;
+    cursor: pointer;
+}
+
+.checkbox input[type=checkbox], .checkbox-inline input[type=checkbox], .radio input[type=radio], .radio-inline input[type=radio] {
+    position: absolute;
+    margin-top: 4px\9;
+    margin-left: -20px;
+}
+
+input[type=checkbox], input[type=radio] {
+    margin: 1px 0 0;
+    margin-top: 1px\9;
+    line-height: normal;
+}
+
+input[type=checkbox], input[type=radio] {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: 0;
 }
