--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -37,6 +37,12 @@
     // border-bottom: 1px solid #cfcfcf;
 }
 
+.HM .abt-toolbar {
+    border-left: 1px solid #cfcfcf;
+    border-right: 1px solid #cfcfcf;
+    border-bottom: 1px solid #cfcfcf;
+}
+
 .checkbox label,
 .radio label {
     min-height: 20px;
